@@ -166,6 +166,7 @@ GEN  parselect_worker(GEN d, GEN code);
 void parfor0(GEN a, GEN b, GEN code, GEN code2);
 GEN  parfor_worker(GEN i, GEN C);
 void parforprime0(GEN a, GEN b, GEN code, GEN code2);
+void parforprimestep0(GEN a, GEN b, GEN q, GEN code, GEN code2);
 void parforvec0(GEN a, GEN code, GEN code2, long flag);
 GEN  parvector_worker(GEN i, GEN C);
 GEN  polmodular_worker(GEN pt, ulong L, GEN hilb, GEN factu,
