@@ -69,6 +69,8 @@ iferr: error("domain error in zeta: argument = 1")
 parfor: [2, 6, 20, 70, 252, 924, 3432, 12870, 48620, 184756]
 parforprime: [0, 6, 20, 0, 252, 0, 3432, 0, 0, 0, 705432, 0, 10400600, 0, 0,
  0, 2333606220, 0, 35345263800, 0]
+parforprimestep: [0, 0, 0, 0, 0, 0, 3432, 0, 0, 0, 0, 0, 10400600, 0, 0, 0, 
+0, 0, 35345263800, 0]
 parforvec: [[0, 0], [0, 1], [0, 2], [1, 0], [1, 1], [1, 2], [2, 0], [2, 1], 
 [2, 2]]
 parforvec: [[0, 0], [0, 1], [0, 2], 0, [1, 1], [1, 2], 0, 0, [2, 2]]
@@ -103,4 +105,4 @@ sumnummonien : 1.6449340668482264364724151666460251892
 sumpos : 1.6449340668482264364724151666460251892
 compr: [5, 10, 26, 50, 122, 170, 290, 362, 530, 842]
 compr: [5, 10, 26, 50]
-Total time spent: 172
+Total time spent: 638
